# Quod_THA

./: .gitignore  README.md  pyproject.toml
data/processed/: panel_h3_mh6.joblib
models/: xgb_poisson_h3_cutoff=2019-03-31_val=2019-01-31.joblib
notebooks/: 01_eda.ipynb  02_stat_modeling.ipynb
notebooks/models/: xgb_poisson_h3_cutoff=2019-01-31_val=2018-11-30.joblib  xgb_poisson_h3_cutoff=2019-07-31_val=2019-05-31.joblib
scripts/: benchmark.py  predict.py
src/: config.py  data.py  features.py  panel.py
src/builder/: __init__.py  baseline_a.py  tweedie.py  xgb_poisson.py
