[tool.poetry]
name = "quod-tha"
version = "0.1.0"
description = ""
authors = ["Zaid El Mokrie El Idrissi <zaidelmokrielidrissi@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = ">=3.0.0,<4.0.0"
numpy = ">=2.4.1,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
ipympl = ">=0.10.0,<0.11.0"
pyarrow = ">=15,<19"
xgboost = ">=3.1.3,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=7.1.0,<8.0.0"
